tests/baselines/reference/computedPropertyNames21_ES5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
computedPropertyNames21_ES5.ts(5,6): error TS2465: 'this' cannot be referenced in a computed property name.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== computedPropertyNames21_ES5.ts (1 errors) ====
    class C {
        bar() {
            return 0;
        }
        [this.bar()]() { }
         ~~~~
!!! error TS2465: 'this' cannot be referenced in a computed property name.
    }